this commit has all login screens

--- a/app/src/main/res/layout/activity_password_login.xml
+++ b/app/src/main/res/layout/activity_password_login.xml
@@ -6,21 +6,26 @@
     android:layout_height="match_parent"
     android:background="@color/backroundLogin"
     android:orientation="vertical"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    >
+
+ <com.example.android.movieapp.Sign_in_error
+     android:id="@+id/viewPasswordLogin"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintStart_toStartOf="parent"></com.example.android.movieapp.Sign_in_error>
 
     <TextView
         android:id="@+id/textPasswordLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/small_dimens_marginLR"
+        android:layout_marginTop="@dimen/marginTopLogin"
         android:fontFamily="monospace"
-        android:text="INFORME SUA SENHA"
-        android:textSize="22dp"
+        android:text="@string/text_password_login"
+        android:textColor="@color/titlecolor"
+        android:textSize="@dimen/title_size"
         android:textStyle="bold"
-        android:textColor="#5b5a5a"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,10 +34,10 @@
         android:id="@+id/emailPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#5b5a5a"
+        android:textColor="@color/titlecolor"
         android:layout_marginStart="12dp"
         android:layout_marginTop="116dp"
-        android:text="teste@test.com"
+        android:text="@string/email_test"
         android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textPasswordLogin" />
@@ -40,13 +45,13 @@
     <EditText
         android:id="@+id/passwordEditPassword"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="@dimen/edit_height"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/edittext_bottom_border"
-        android:hint="   Senha"
-        android:textColor="#5b5a5a"
+        android:hint="@string/password_hint"
+        android:textColor="@color/titlecolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailPassword" />
@@ -55,9 +60,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="6dp"
-        android:text="Esqueceu sua senha?"
-        android:textColor="#5b5a5a"
+        android:layout_marginEnd="@dimen/small_dimens_marginLR"
+        android:text="@string/password_forgot"
+        android:textColor="@color/titlecolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordEditPassword" />
 
@@ -65,13 +70,14 @@
         android:id="@+id/buttonPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/small_dimens_marginLR"
+        android:layout_marginEnd="@dimen/small_dimens_marginLR"
         android:layout_marginBottom="24dp"
         android:background="@drawable/shape"
-        android:backgroundTint="#129793"
-        android:text="Entrar"
-        android:textColor="#ffffff"
+        android:backgroundTint="@color/light_blue"
+        android:text="@string/log_in"
+        android:onClick="buttonPasswordLogin"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
