--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -4,23 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
+    android:paddingLeft="@dimen/PaddinLRContraint"
+    android:paddingRight="@dimen/PaddinLRContraint"
     android:orientation="vertical"
-    android:background="@color/backroundLogin">
+    android:background="@color/backroundLogin"
+    android:id="@+id/NewAccount">
 
 
     <TextView
         android:id="@+id/textNewAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="51dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/small_dimens_marginLR"
+        android:layout_marginTop="@dimen/marginTopLogin"
+        android:layout_marginEnd="@dimen/small_dimens_marginLR"
         android:fontFamily="monospace"
-        android:text="Crie sua nova conta"
+        android:text="@string/text_new_account"
         android:textAlignment="center"
-        android:textSize="22dp"
+        android:textSize="@dimen/title_size"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
@@ -31,37 +32,49 @@
         android:id="@+id/emailNewAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="@dimen/small_dimens_marginLR"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        android:text="teste@teste.com"
-        android:textColor="#5b5a5a"
+        android:layout_marginEnd="@dimen/small_dimens_marginLR"
+        android:text="@string/email_test"
+        android:textColor="@color/titlecolor"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textNewAccount" />
 
-    <EditText
+    <!--<EditText
         android:id="@+id/nameNewAccount"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="92dp"
         android:background="@drawable/edittext_bottom_border"
         android:ems="10"
-        android:hint="   Nome completo"
+        android:hint="@string/complete_name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailNewAccount" />
+        app:layout_constraintTop_toBottomOf="@+id/emailNewAccount" /> -->
 
-    <EditText
+    <com.example.android.movieapp.New_Account_Error
+        android:id="@+id/nameNewAccount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailNewAccount"></com.example.android.movieapp.New_Account_Error>
+
+    <!--<EditText
         android:id="@+id/userNewAccount"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="   Nome de usuário"
+        android:hint="@string/name_user"
         android:background="@drawable/edittext_bottom_border"
         android:inputType="textPersonName"
 
@@ -69,32 +82,60 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameNewAccount" />
+        -->
 
-    <EditText
+    <com.example.android.movieapp.New_Account_Error
+        android:id="@+id/userNewAccount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameNewAccount"></com.example.android.movieapp.New_Account_Error>
+
+   <!-- <EditText
         android:id="@+id/passwordNewAccount"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/edit_height"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:background="@drawable/edittext_bottom_border"
         android:inputType="textPersonName"
-        android:hint="   Senha"
+        android:hint="@string/password_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userNewAccount" />
+        app:layout_constraintTop_toBottomOf="@+id/userNewAccount"app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/userNewAccount"
+        /> -->
+
+    <com.example.android.movieapp.New_Account_Error
+        android:id="@+id/passwordNewAccount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/userNewAccount"></com.example.android.movieapp.New_Account_Error>
+
+
 
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="@dimen/small_dimens_marginLR"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="@dimen/small_dimens_marginLR"
         android:layout_marginBottom="16dp"
         android:background="@drawable/shape"
-        android:backgroundTint="#129793"
-        android:text="Avançar"
-        android:textColor="#ffffff"
+        android:backgroundTint="@color/light_blue"
+        android:text="@string/advance"
+        android:textColor="@color/white"
+        android:onClick="buttonNewAccount"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
