--- a/app/src/main/res/layout/activity_reset_password_confirm.xml
+++ b/app/src/main/res/layout/activity_reset_password_confirm.xml
@@ -2,60 +2,70 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:paddingLeft="@dimen/PaddinLRContraint"
     android:paddingRight="@dimen/PaddinLRContraint"
-    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/backroundLogin"
-    android:id="@+id/Loignlayout">
+    android:orientation="vertical"
+    >
 
     <TextView
-        android:id="@+id/textLogin"
-        android:layout_width="wrap_content"
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
         android:layout_marginTop="@dimen/marginTopLogin"
+        android:layout_marginEnd="8dp"
         android:fontFamily="monospace"
-        android:gravity="center_horizontal"
-        android:text="@string/text_login"
+        android:text="@string/confirm_info"
         android:textAlignment="center"
-        android:textColor="@color/titlecolor"
         android:textSize="@dimen/title_size"
-
+        android:textColor="@color/titlecolor"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editTextLogin"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/edit_height"
-        android:layout_marginStart="@dimen/small_dimens_marginLR"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="@dimen/small_dimens_marginLR"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/edittext_bottom_border"
-        android:ellipsize="start"
-        android:hint="@string/email_hint"
-        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/email_test"
+        android:textColor="@color/titlecolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/edit_height"
+        android:hint="@string/name_user"
+        android:layout_marginEnd="@dimen/small_dimens_marginLR"
+        android:layout_marginStart="@dimen/small_dimens_marginLR"
+        android:layout_marginTop="96dp"
+        android:background="@drawable/edittext_bottom_border"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
-        android:id="@+id/buttonLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="@dimen/small_dimens_marginLR"
+        android:layout_marginEnd="@dimen/small_dimens_marginLR"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/shape"
         android:backgroundTint="@color/light_blue"
         android:text="@string/advance"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.75"
-        app:layout_constraintStart_toStartOf="parent" />
 
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
