--- a/app/src/main/res/layout/activity_sign_up_continue.xml
+++ b/app/src/main/res/layout/activity_sign_up_continue.xml
@@ -4,22 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/PaddinLRContraint"
-    android:paddingRight="@dimen/PaddinLRContraint"
-    android:orientation="vertical"
     android:background="@color/backroundLogin"
-    >
-
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/PaddinLRContraint"
+    android:paddingRight="@dimen/PaddinLRContraint">
 
     <TextView
-        android:id="@+id/textToken"
+        android:id="@+id/textContinue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/small_dimens_marginLR"
         android:layout_marginTop="@dimen/marginTopLogin"
         android:layout_marginEnd="@dimen/small_dimens_marginLR"
         android:fontFamily="monospace"
-        android:text="@string/text_token_validation"
+        android:text="@string/text_sign_up_continue"
         android:textAlignment="center"
         android:textSize="@dimen/title_size"
         android:textStyle="bold"
@@ -28,68 +26,69 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/emailToken"
+        android:id="@+id/emailContinue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/small_dimens_marginLR"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="@dimen/small_dimens_marginLR"
         android:text="@string/email_test"
         android:textColor="@color/dark_orange"
-        android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textToken" />
+        app:layout_constraintTop_toBottomOf="@+id/textContinue" />
 
     <EditText
-        android:id="@+id/codeToker"
+        android:id="@+id/codeContinue"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="92dp"
+        android:layout_height="@dimen/edit_height"
+        android:layout_marginTop="56dp"
         android:background="@drawable/edittext_bottom_border"
         android:hint="@string/code_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailToken" />
+        app:layout_constraintTop_toBottomOf="@+id/emailContinue" />
 
     <TextView
-        android:id="@+id/textLinkToken"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/code_not_recive"
-        android:textColor="@color/titlecolor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.277"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/codeToker" />
-
-    <TextView
-        android:id="@+id/linkToken"
+        android:id="@+id/textNotReciveContinue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/small_dimens_marginLR"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="@dimen/small_dimens_marginLR"
+        android:text="@string/code_not_recive"
+        android:textColor="@color/titlecolor"
+        app:layout_constraintEnd_toStartOf="@+id/textLinkContinue"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/codeContinue" />
+
+    <TextView
+        android:id="@+id/textLinkContinue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="28dp"
         android:text="@string/send_again"
         android:textColor="@color/light_orange"
         android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textLinkToken"
-        app:layout_constraintStart_toEndOf="@+id/textLinkToken" />
-
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/codeContinue" />
 
     <Button
-        android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/small_dimens_marginLR"
         android:layout_marginEnd="@dimen/small_dimens_marginLR"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/shape"
         android:backgroundTint="@color/light_blue"
         android:text="@string/code_validation"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+
         app:layout_constraintStart_toStartOf="parent" />
+
+
 </android.support.constraint.ConstraintLayout>
