--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -10,7 +10,7 @@
     android:background="@color/backroundLogin">
 
     <TextView
-        android:id="@+id/textNewPassword"
+        android:id="@+id/text_new_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/small_dimens_marginLR"
@@ -28,18 +28,19 @@ E-MAIL:"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/emailNewPassword"
+        android:id="@+id/email_new_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/email_test"
+        android:textSize="@dimen/email_size"
         android:textColor="@color/dark_orange"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textNewPassword" />
+        app:layout_constraintTop_toBottomOf="@id/text_new_password" />
 
     <EditText
-        android:id="@+id/tokenNewPassword"
+        android:id="@+id/token_new_password"
         android:layout_width="match_parent"
         android:layout_height="@dimen/edit_height"
         android:layout_marginTop="40dp"
@@ -48,10 +49,10 @@ E-MAIL:"
         android:textColor="@color/titlecolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/emailNewPassword" />
+        app:layout_constraintTop_toBottomOf="@id/email_new_password" />
 
     <TextView
-        android:id="@+id/textNotReciveNewPassword"
+        android:id="@+id/text_not_recive_new_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/small_dimens_marginLR"
@@ -59,13 +60,13 @@ E-MAIL:"
         android:layout_marginEnd="@dimen/small_dimens_marginLR"
         android:text="@string/code_not_recive"
         android:textColor="@color/titlecolor"
-        app:layout_constraintEnd_toStartOf="@+id/textLinkNewPassword"
+        app:layout_constraintEnd_toStartOf="@+id/text_link_new_password"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tokenNewPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/token_new_password" />
 
     <TextView
-        android:id="@+id/textLinkNewPassword"
+        android:id="@+id/text_link_new_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -74,10 +75,10 @@ E-MAIL:"
         android:textColor="@color/light_orange"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tokenNewPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/token_new_password" />
 
     <TextView
-        android:id="@+id/text2NewPassword"
+        android:id="@+id/text2_new_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -91,10 +92,10 @@ E-MAIL:"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textNotReciveNewPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/text_not_recive_new_password" />
 
     <EditText
-        android:id="@+id/newPasswordEditNewPassaword"
+        android:id="@+id/new_password_edit_new_passaword"
         android:layout_width="match_parent"
         android:layout_height="@dimen/edit_height"
         android:layout_marginTop="8dp"
@@ -103,10 +104,10 @@ E-MAIL:"
         android:textColor="@color/titlecolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text2NewPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/text2_new_password" />
 
     <EditText
-        android:id="@+id/confirmNewPassword"
+        android:id="@+id/confirm_new_password"
         android:layout_width="match_parent"
         android:layout_height="@dimen/edit_height"
         android:layout_marginTop="8dp"
@@ -115,15 +116,15 @@ E-MAIL:"
         android:textColor="@color/titlecolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newPasswordEditNewPassaword" />
+        app:layout_constraintTop_toBottomOf="@+id/new_password_edit_new_passaword" />
 
     <Button
-        android:id="@+id/buttonNewPassword"
+        android:id="@+id/button_new_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="@dimen/button_bottom"
         android:background="@drawable/shape"
         android:backgroundTint="@color/light_blue"
         android:text="@string/change_password"
