--- a/app/src/main/res/layout/activity_password_login.xml
+++ b/app/src/main/res/layout/activity_password_login.xml
@@ -8,15 +8,15 @@
     android:orientation="vertical"
     >
 
- <com.example.android.movieapp.Sign_in_error
-     android:id="@+id/viewPasswordLogin"
+ <com.example.android.movieapp.SignInError
+     android:id="@+id/view_password_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
-     app:layout_constraintStart_toStartOf="parent"></com.example.android.movieapp.Sign_in_error>
+     app:layout_constraintStart_toStartOf="parent"></com.example.android.movieapp.SignInError>
 
     <TextView
-        android:id="@+id/textPasswordLogin"
+        android:id="@+id/text_password_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/small_dimens_marginLR"
@@ -31,19 +31,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/emailPassword"
+        android:id="@+id/email_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/titlecolor"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="116dp"
         android:text="@string/email_test"
-        android:textSize="16dp"
+        android:textSize="@dimen/email_size"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textPasswordLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/text_password_login" />
 
     <EditText
-        android:id="@+id/passwordEditPassword"
+        android:id="@+id/password_edit_password"
         android:layout_width="match_parent"
         android:layout_height="@dimen/edit_height"
         android:layout_marginStart="16dp"
@@ -54,9 +54,10 @@
         android:textColor="@color/titlecolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/email_password" />
 
     <TextView
+        android:id="@+id/text2_forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -64,15 +65,15 @@
         android:text="@string/password_forgot"
         android:textColor="@color/titlecolor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordEditPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/password_edit_password" />
 
     <Button
-        android:id="@+id/buttonPassword"
+        android:id="@+id/button_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/small_dimens_marginLR"
         android:layout_marginEnd="@dimen/small_dimens_marginLR"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="@dimen/button_bottom"
         android:background="@drawable/shape"
         android:backgroundTint="@color/light_blue"
         android:text="@string/log_in"
