--- a/app/src/main/res/layout/activity_reset_password_confirm.xml
+++ b/app/src/main/res/layout/activity_reset_password_confirm.xml
@@ -11,7 +11,7 @@
     >
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/text_reset_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
@@ -29,18 +29,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/email_reset_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
         android:text="@string/email_test"
+        android:textSize="@dimen/email_size"
         android:textColor="@color/titlecolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/text_reset_password" />
 
     <EditText
+        android:id="@+id/edit_user_reset_password"
         android:layout_width="match_parent"
         android:layout_height="@dimen/edit_height"
         android:hint="@string/name_user"
@@ -51,14 +53,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/email_reset_password" />
 
     <Button
+        android:id="@+id/button_reset_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/small_dimens_marginLR"
         android:layout_marginEnd="@dimen/small_dimens_marginLR"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="@dimen/button_bottom"
         android:background="@drawable/shape"
         android:backgroundTint="@color/light_blue"
         android:text="@string/advance"
