--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,10 +8,10 @@
     android:paddingRight="@dimen/PaddinLRContraint"
     android:orientation="vertical"
     android:background="@color/backroundLogin"
-    android:id="@+id/Loignlayout">
+    android:id="@+id/login_layout">
 
     <TextView
-        android:id="@+id/textLogin"
+        android:id="@+id/text_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/marginTopLogin"
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextLogin"
+        android:id="@+id/edit_text_login"
         android:layout_width="match_parent"
         android:layout_height="@dimen/edit_height"
         android:layout_marginStart="@dimen/small_dimens_marginLR"
@@ -38,16 +38,16 @@
         android:background="@drawable/edittext_bottom_border"
         android:ellipsize="start"
         android:hint="@string/email_hint"
-        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
+        app:layout_constraintBottom_toTopOf="@+id/button_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/text_login" />
 
     <Button
-        android:id="@+id/buttonLogin"
+        android:id="@+id/button_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="@dimen/button_bottom"
         android:background="@drawable/shape"
         android:backgroundTint="@color/light_blue"
         android:text="@string/advance"
