--- a/app/src/main/res/layout/sign_in_error.xml
+++ b/app/src/main/res/layout/sign_in_error.xml
@@ -6,7 +6,7 @@
     >
 
     <TextView
-        android:id="@+id/textSignInError"
+        android:id="@+id/text_sign_in_error"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Usuário ou senha inválido"
