--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="PaddinLRContraint">16dp</dimen>
     <dimen name="marginTopLogin">60dp</dimen>
     <dimen name="title_size">22dp</dimen>
+    <dimen name="button_bottom">32dp</dimen>
+    <dimen name="email_size">16dp</dimen>
 </resources>
